--- a/.github/workflows/suishoujxc.yml
+++ b/.github/workflows/suishoujxc.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   schedule:
     - cron: '46 4/6 * * *'
-jobs:
+jobs:  # 22022
   build:
     runs-on: ubuntu-latest
     steps:
